Complete data preparation

--- a/Collecting_rening_data.ipynb
+++ b/Collecting_rening_data.ipynb
@@ -2273,6 +2273,37 @@
     "new_export_file = 'hcm_rent_data.csv'\n",
     "data.to_csv(new_export_file)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 229,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        {'Diện tích': '50 m²', 'Mức giá': '17 triệu/th...\n",
+       "1        {'Diện tích': '50 m²', 'Mức giá': '17 triệu/th...\n",
+       "2        {'Diện tích': '77 m²', 'Mức giá': '23 triệu/th...\n",
+       "3        {'Diện tích': '50 m²', 'Mức giá': '17 triệu/th...\n",
+       "4        {'Diện tích': '52 m²', 'Mức giá': '16,9 triệu/...\n",
+       "                               ...                        \n",
+       "40594    {'Diện tích': '8.000 m²', 'Mức giá': '100 triệ...\n",
+       "40595    {'Diện tích': '160 m²', 'Mức giá': '130 triệu/...\n",
+       "40596    {'Diện tích': '1.350 m²', 'Mức giá': '22 triệu...\n",
+       "40597    {'Diện tích': '17.000 m²', 'Mức giá': '20 triệ...\n",
+       "40598    {'Diện tích': '100 m²', 'Mức giá': '345 nghìn/...\n",
+       "Name: Meta data, Length: 40599, dtype: object"
+      ]
+     },
+     "execution_count": 229,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['Meta data']"
+   ]
   }
  ],
  "metadata": {
