--- a/Process_rent_data.ipynb
+++ b/Process_rent_data.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
        "4  05/12/2023  "
       ]
      },
-     "execution_count": 175,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
        "Index(['Address', 'Rent type', 'Meta data', 'Post date'], dtype='object')"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +458,7 @@
        "[5 rows x 27 columns]"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +494,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 147,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -626,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -658,7 +658,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -688,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -701,7 +701,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 152,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -757,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -769,7 +769,7 @@
        "       'hóc môn'], dtype=object)"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -800,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -818,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -835,7 +835,7 @@
        "       '09/12/2023'], dtype=object)"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -853,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -865,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -907,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -916,7 +916,7 @@
        "array(['m²'], dtype=object)"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -931,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -949,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -973,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -983,7 +983,7 @@
        "       'triệu/m²'], dtype=object)"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1016,7 +1016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1068,7 +1068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1089,7 +1089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1099,7 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1114,7 +1114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1133,7 +1133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1164,7 +1164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1177,7 +1177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1209,6 +1209,16 @@
    "metadata": {},
    "source": [
     "And that's the end of our data preparation. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "export_file = 'processed_rent_data.csv'\n",
+    "final_df.to_csv(export_file)"
    ]
   }
  ],
