Question 2 analysis completion (phase 2)

--- a/Process_rent_data.ipynb
+++ b/Process_rent_data.ipynb
@@ -1183,7 +1183,7 @@
    "source": [
     "def furniture_transform(x):\n",
     "    if pd.isna(x): \n",
-    "        return x\n",
+    "        return 'không'\n",
     "    \n",
     "    x = x.lower().replace('.', '').strip()\n",
     "    \n",
