Regression model explained

--- a/Asking_rent_data.ipynb
+++ b/Asking_rent_data.ipynb
@@ -6204,7 +6204,7 @@
     "\n",
     "One of the interesting insights from the many graphs (really, it's a lot) is that some districts have many positive correlation with some property types, while some has negitive correlation with property types but no districts has both negitive correlation and positive correlation with the price of any property types (I'm defining having negitive correlation as having under -0.1 correlation and having positive correlation as over 0.1 correlation). Meaning some districts are expensive, while others are cheaps.\n",
     "\n",
-    "Among the 'expensive districts' the them, cost of property in `1st District`, `District 2` and `District 3` has more than 2 positive positive correlation, with:\n",
+    "Among the '*expensive districts*' the them, cost of property in `1st District`, `District 2` and `District 3` has more than 2 positive positive correlation, with:\n",
     "- `District 1` has high positive correlation with `Nhà mặt phố` and `Nhà trọ`.\n",
     "- `District 2` has high positive correlation with `Căn hộ chung cư`, `Shophouse nhà phố thương mại` and `Nhà riêng`.\n",
     "- `District 3` has high positive correlation with `Nhà mặt phố`.\n",
@@ -6212,7 +6212,7 @@
     "\n",
     "Other than that, `Bình Thạnh District` also has high correlation with price of `Cửa hàng, ki ốt`.\n",
     "\n",
-    "On the other side of 'inexpensive districts', only `District 9` and `Gò Vấp District` has more than 2 negitive correlation, in which both has high negitive correlation with is with `Shophouse nhà phố thương mại` and `Nhà trọ`. `District 9` also has high negitive correlation with `Căn hộ chung cư` and `Biệt thự, nhà liền kề`. Other than that:\n",
+    "On the other side of '*inexpensive districts*', only `District 9` and `Gò Vấp District` has more than 2 negitive correlation, in which both has high negitive correlation with is with `Shophouse nhà phố thương mại` and `Nhà trọ`. `District 9` also has high negitive correlation with `Căn hộ chung cư` and `Biệt thự, nhà liền kề`. Other than that:\n",
     "- has high negitive correlation with `Nhà trọ`.\n",
     "- `Bình Chánh District`, `Nhà Bè District` has high negitive correlation with `Biệt thự, nhà liền kề`.\n",
     "- `District 12`, `Tân Phú District`, `Thủ Đức District` and `Bình Tân District` has high negitive correlation with `Nhà trọ`."
