--- a/Modeling.ipynb
+++ b/Modeling.ipynb
@@ -296,7 +296,7 @@
     "\n",
     "ElasticNet regression is a versatile technique that combines the strengths of Lasso and Ridge regularization methods, offering flexibility in handling multicollinearity, feature selection, and model complexity in linear regression settings.\n",
     "\n",
-    "With that said, ElasticNet Regression has some short comming, include:\n",
+    "Limitation\n",
     "- High computational complexity\n",
     "- Difficulty in fine-tunning parameters\n",
     "- Less effective in highly sparse or dense data (sparse dataset where most predictors are irrelevant is better trained with Lasso Regression, and dense data set where large number of highly correlated predictors is better trained with Ridge Regression).\n",
@@ -313,14 +313,90 @@
     "\n",
     "Spliting is very important in Decision Tree Regression as it determine the ability to classify observations into optermal threshold. Usually, we can effect the slitting process by tunning the hyperparameters (maximum depth, minimum samples per leaf, minimum samples per split) of algorithm.\n",
     "\n",
-    "Decision Tree Regression has a lot advantages:\n",
+    "Advantages:\n",
     "- Interpretability: It is easy to interpret and visualize.\n",
     "- Handling Non-linearity: It can capture non-linear relationhips between features and the target variable.\n",
     "\n",
-    "But Decision Tree Regression also has some limitations:\n",
-    "- Overfitting: Decision trees are prone to overfiting when tree depth is too deep or sample per leaf is to few.\n",
+    "Limitations:\n",
+    "- Overfitting: Decision trees are prone to overfiting when tree depth is too deep or sample per leaf is to few."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Random Forest Regression\n",
     "\n",
-    "#### Random Forest Regression"
+    "Random Forest Regression is a type of non-parameter regression model that is build upon Decision Tree Regression. \n",
+    "\n",
+    "The way it works is quite complication compared to the other models, but also really cool.\n",
+    "\n",
+    "1. Create random Subset of Data and Features:\n",
+    "\n",
+    "Random Forest builds multiple decision trees by sampling the dataset with replacement (bootstrap sampling) to create different training sets for each tree.\n",
+    "\n",
+    "Additionally, at each node of each tree, it considers only a random subset of features (a process called feature bagging).\n",
+    "\n",
+    "2. Construct of Decision Trees:\n",
+    "\n",
+    "Each decision tree in the Random Forest is grown independently, typically with a limited depth or stopping criteria.\n",
+    "The trees are trained on different subsets of the data and features, leading to a diverse set of trees. This process works by using a random subset of variables at each step of build trees. Meaning at each step, we only consider k number of features, and picking one to create a new feature branch for the tree until we reach leaf (our sample size become too small to divide).\n",
+    "\n",
+    "3. Aggregate of Predictions:\n",
+    "\n",
+    "When making predictions for a new data point, each tree in the forest independently predicts the target variable.\n",
+    "For regression tasks, the final prediction is calculated by averaging (or taking the median) of the predictions from all individual trees.\n",
+    "\n",
+    "It's worth noting that the bootstrap sampling allow duplication in sample, which mean after builing all our Decision Trees there will be a subset of samples (typically 1/3 of the data set) left. This is called the out of bag sample. We can use this to test the model, which will help use measure of accurate our forest it. \n",
+    "\n",
+    "One cool things about Random Forest is that it has a particular effective way to fill in missing data, using a proximity matrix. \n",
+    "\n",
+    "Advantage:\n",
+    "- Reduced overfitting: Combining multiple trees reduces overfitting compared to a single decision tree by averaging out individual tree predictions\n",
+    "- High Predictive Accuracy: They often provide high predictive accuracy and generalize well to new data.\n",
+    "- Handling Large Feature Spaces: It can handle a large number of features and automatically select important features by using feature bagging.\n",
+    "\n",
+    "Limitation: \n",
+    "- Complexity and Interpretability: Random Forests can be more complex and less interpretable than a single decision tree.\n",
+    "- Computationally Intensive: Training a large number of trees can be computationally expensive for large datasets. This will become a big deal as you will see with our analysis below.\n",
+    "\n",
+    "Similar with Decision Tree Regression, Random Forest also has many hyperparameter to tune: `number of Trees`, `maximum depth of trees`, `minimum samples split and milimun samples leaf`, `maximum features`.\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "| Month | Savings |\n",
+    "| -------- | ------- |\n",
+    "| January | $250 |\n",
+    "| February | $80 |\n",
+    "| March | $420 |\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<!-- Here's the `TL;DR` version -->\n",
+    "\n",
+    "#### TL;DR\n",
+    "\n",
+    "| Regression Model           | What it is about                                                                       |\n",
+    "| -------------------------- | -------------------------------------------------------------------------------------- |\n",
+    "| Multiple Linear Regression | Best fit a line (or in high dimension a plane) to sample points                         |\n",
+    "| Ridge Regression           | Introduces bias to avoid overfitting test data. Works well with highly correlated data |\n",
+    "| Lasso Regression           | Similar to Ridge Regression, suitable for sparse datasets with potentially unrelated features |\n",
+    "| ElasticNet Regression      | Combines Ridge and Lasso Regression techniques                                            |\n",
+    "| Decision Tree Regression   | Uses a tree data structure to handle non-linearity, can be prone to overfitting          |\n",
+    "| Random Forest Regression   | Ensemble of decision trees, improves upon Decision Tree Regression by using multiple trees |\n"
    ]
   },
   {
