Modeling and some clean up

--- a/Modeling.ipynb
+++ b/Modeling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,8 @@
     "from sklearn.preprocessing import MinMaxScaler\n",
     "from sklearn.linear_model import LinearRegression, Ridge\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
-    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.model_selection import cross_val_score, cross_validate\n",
+    "\n",
     "\n",
     "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score"
    ]
@@ -35,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -374,29 +375,323 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "| Month | Savings |\n",
-    "| -------- | ------- |\n",
-    "| January | $250 |\n",
-    "| February | $80 |\n",
-    "| March | $420 |\n"
+    "<!-- Here's the `TL;DR` version -->\n",
+    "\n",
+    "#### TL;DR\n",
+    "\n",
+    "| Regression Model           | What it is about | Number of hyperparameter|  \n",
+    "| -------------------------- | -------------------------------------------------------------------------------------- | --- |   \n",
+    "| Multiple Linear Regression | Best fit a line (or in high dimension a plane) to sample points                         | 0 |  \n",
+    "| Ridge Regression           | Introduces bias to avoid overfitting test data. Works well with highly correlated data | 1 |   \n",
+    "| Lasso Regression           | Similar to Ridge Regression, suitable for sparse datasets with potentially unrelated features | 1 |  \n",
+    "| ElasticNet Regression      | Combines Ridge and Lasso Regression techniques                                            | 2 |  \n",
+    "| Decision Tree Regression   | Uses a tree data structure to handle non-linearity, can be prone to overfitting          | many |  \n",
+    "| Random Forest Regression   | Ensemble of decision trees, improves upon Decision Tree Regression by using multiple trees | many |  \n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<!-- Here's the `TL;DR` version -->\n",
+    "### Model selection\n",
     "\n",
-    "#### TL;DR\n",
+    "For model selection, we are going to use K-fold Cross Validation to evaluate the efficiency of each regression model to determine the most suitable model to use for our dataset.\n",
     "\n",
-    "| Regression Model           | What it is about                                                                       |\n",
-    "| -------------------------- | -------------------------------------------------------------------------------------- |\n",
-    "| Multiple Linear Regression | Best fit a line (or in high dimension a plane) to sample points                         |\n",
-    "| Ridge Regression           | Introduces bias to avoid overfitting test data. Works well with highly correlated data |\n",
-    "| Lasso Regression           | Similar to Ridge Regression, suitable for sparse datasets with potentially unrelated features |\n",
-    "| ElasticNet Regression      | Combines Ridge and Lasso Regression techniques                                            |\n",
-    "| Decision Tree Regression   | Uses a tree data structure to handle non-linearity, can be prone to overfitting          |\n",
-    "| Random Forest Regression   | Ensemble of decision trees, improves upon Decision Tree Regression by using multiple trees |\n"
+    "#### K-fold Cross Validation\n",
+    "\n",
+    "The problem with the simple method of separating data into 2 catagorty of `test` and `train` is that the `train` data might not be representative of the population and can mistrain the model that way, leading it to have a bad score when tested. This could be due to a missing features and un-even ratio of features.\n",
+    "\n",
+    "To solve this problem, we can use K-fold Split Method. Unlike with the simple method, k-fold slit method split the data into multiple folds, and train the data on those folds (fold is a subset of data divided equally by number of folds). While this work better than the simple method, this solution still encounter problem of missing features and un-even ratio of features. \n",
+    "\n",
+    "To solve this problem, we use Stratified K-fold Split Method, which works just like K-fold Slit Method, but it makes sure to take number of features and ratio of features into account when slitting the data set. This solves our problems of represting the features in the dataset use for test and train properly.\n",
+    "\n",
+    "K-fold Cross Validation (note that we are usig Stratified K-fold Slitting method) is a resampling technique used to evaluate the performance of a machine learning model. Essentially its combines the K-fold Cross Validation technique to investigate model efficiency, estimating scores through training and testing multiple dataset. This method is very handy to use to do model selection and hyperparameter tunning. (Which is what we are trying to do now)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Model selection\n",
+    "\n",
+    "There are flavors to model selection:\n",
+    "1. Using `cross_val_score`: This method allows us to measure the accuracy of a models on multiple datasets to determine the best score. \n",
+    "2. Using `GridSearchCV`: This method allows us to tune hyperparameters of a model while feeding k-fold datasets to determine the best hyperparameter for the model.\n",
+    "\n",
+    "In practice, we can use both to do model selection. But a more realist setting, Data Scientist would most likely use `GridSearchCV` to model select and tune at the same time. But our project is focus on the education and exploratory aspects of Data Science, therefore I'd like to take the simpler approach to fully understand the basic first, before moving onto more advance method. In addition, using only `cross_val_score` will focus us entirely on model selection and it would save a lot more time compare to the `GridSearchCV` approach."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Prepare predictors and response variable\n",
+    "## TODO: Re tweek this please\n",
+    "x = data.loc[:, ['Area', 'Bedrooms', 'Toilets','Floors', '1', '10', '11', '12', '2', '3', '4', '5', '6', '7', '8', '9',\n",
+    "       'bình chánh', 'bình thạnh', 'bình tân', 'củ chi', 'gò vấp', 'hóc môn',\n",
+    "       'nhà bè', 'phú nhuận', 'thủ đức', 'tân bình', 'tân phú']]\n",
+    "y = data['Price']\n",
+    "\n",
+    "# Define score matrix\n",
+    "scoring_metrics = ['neg_mean_squared_error', 'neg_mean_absolute_error', 'r2']\n",
+    "\n",
+    "# Prepare models params\n",
+    "model_params = {\n",
+    "    'multiple_linear_regression': {\n",
+    "        'model': LinearRegression(),\n",
+    "        'params': {\n",
+    "            'fit_intercept': [True, False]\n",
+    "        }\n",
+    "    },\n",
+    "    'ridge_regression': {\n",
+    "        'model': Ridge(),\n",
+    "        'params': {'alpha': [0.1, 1, 10, 100, 0.2, 0.18, 0.19]}\n",
+    "    },\n",
+    "    'lasso_regression': {\n",
+    "        'model': Lasso(),\n",
+    "        'params': {'alpha': [0.1, 1, 10, 100, 0.2, 0.18, 0.19]}\n",
+    "    }, \n",
+    "    'elasticnet_regression': {\n",
+    "        'model': ElasticNet(),\n",
+    "        'params': {'alpha': [0.1, 1, 10], 'l1_ratio': [0.3, 0.7, 1]}\n",
+    "    },\n",
+    "    'dtree_regression': {\n",
+    "        'model': DecisionTreeRegressor(),\n",
+    "        'params': {\n",
+    "            'max_depth': [3, 5, 7],\n",
+    "            'min_samples_split': [2, 5, 10],\n",
+    "            'min_samples_leaf': [1, 2, 4]\n",
+    "        }\n",
+    "    },\n",
+    "    'random_forest':{\n",
+    "        'model': RandomForestRegressor(),\n",
+    "        'params': {\n",
+    "            'n_estimators': [50, 100, 200],  # Number of trees in the forest\n",
+    "            'max_depth': [3, 5, 7, None],  # Maximum depth of the trees\n",
+    "            'min_samples_split': [2, 5, 10],  # Minimum samples required to split an internal node\n",
+    "            'min_samples_leaf': [1, 2, 4]  # Minimum number of samples required to be at a leaf node\n",
+    "        }\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scores = []\n",
+    "for model_name, mp in model_params.items():\n",
+    "    clf = GridSearchCV(mp['model'], mp['params'], cv=5, return_train_score=False)\n",
+    "    clf.fit(x, y)\n",
+    "    scores.append({\n",
+    "        'model': model_name,\n",
+    "        'best_score': clf.best_score_,\n",
+    "        'best_params': clf.best_params_\n",
+    "    })"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'model': 'multiple_linear_regression',\n",
+       "  'best_score': 0.5307189884121111,\n",
+       "  'best_params': {'fit_intercept': True}},\n",
+       " {'model': 'ridge_regression',\n",
+       "  'best_score': 0.5307232697000696,\n",
+       "  'best_params': {'alpha': 1}},\n",
+       " {'model': 'lasso_regression',\n",
+       "  'best_score': 0.509699600987996,\n",
+       "  'best_params': {'alpha': 0.1}},\n",
+       " {'model': 'elasticnet_regression',\n",
+       "  'best_score': 0.509699600987996,\n",
+       "  'best_params': {'alpha': 0.1, 'l1_ratio': 1}},\n",
+       " {'model': 'dtree_regression',\n",
+       "  'best_score': 0.6491015990495971,\n",
+       "  'best_params': {'max_depth': 7,\n",
+       "   'min_samples_leaf': 4,\n",
+       "   'min_samples_split': 10}},\n",
+       " {'model': 'random_forest',\n",
+       "  'best_score': 0.6960649503323841,\n",
+       "  'best_params': {'max_depth': None,\n",
+       "   'min_samples_leaf': 4,\n",
+       "   'min_samples_split': 2,\n",
+       "   'n_estimators': 100}}]"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Prepare predictors and response variable\n",
+    "## TODO: Re tweek this please\n",
+    "x = data.loc[:, ['Area', 'Bedrooms', 'Toilets','Floors', '1', '10', '11', '12', '2', '3', '4', '5', '6', '7', '8', '9',\n",
+    "       'bình chánh', 'bình thạnh', 'bình tân', 'củ chi', 'gò vấp', 'hóc môn',\n",
+    "       'nhà bè', 'phú nhuận', 'thủ đức', 'tân bình', 'tân phú']]\n",
+    "y = data['Price']\n",
+    "\n",
+    "# Define score matrix\n",
+    "scoring_metrics = ['neg_mean_squared_error', 'neg_mean_absolute_error', 'r2']\n",
+    "\n",
+    "# Prepare models\n",
+    "model_linear = LinearRegression()\n",
+    "model_ridge = Ridge()\n",
+    "model_lasso = Lasso()\n",
+    "model_dtree = DecisionTreeRegressor()\n",
+    "model_rforest = RandomForestRegressor()\n",
+    "\n",
+    "# Compare models\n",
+    "model_linear_score = cross_validate(model_linear, x, y, cv=10, scoring=scoring_metrics)\n",
+    "model_ridge_score = cross_validate(model_ridge, x, y, cv=10, scoring=scoring_metrics)\n",
+    "model_lasso_score = cross_validate(model_lasso, x, y, cv=10, scoring=scoring_metrics)\n",
+    "model_dtree_score = cross_validate(model_dtree, x, y, cv=10, scoring=scoring_metrics)\n",
+    "model_rforest_score = cross_validate(model_rforest, x, y, cv=10, scoring=scoring_metrics)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>model_linear_score</th>\n",
+       "      <th>model_ridge_score</th>\n",
+       "      <th>model_lasso_score</th>\n",
+       "      <th>model_dtree_score</th>\n",
+       "      <th>model_rforest_score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>fit_time</th>\n",
+       "      <td>0.019744</td>\n",
+       "      <td>0.018255</td>\n",
+       "      <td>0.031058</td>\n",
+       "      <td>0.037427</td>\n",
+       "      <td>2.467586</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>score_time</th>\n",
+       "      <td>0.005108</td>\n",
+       "      <td>0.004413</td>\n",
+       "      <td>0.005786</td>\n",
+       "      <td>0.003619</td>\n",
+       "      <td>0.032944</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>test_neg_mean_squared_error</th>\n",
+       "      <td>84.375763</td>\n",
+       "      <td>84.375922</td>\n",
+       "      <td>99.915344</td>\n",
+       "      <td>73.753408</td>\n",
+       "      <td>57.899905</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>test_neg_mean_absolute_error</th>\n",
+       "      <td>4.716790</td>\n",
+       "      <td>4.715743</td>\n",
+       "      <td>5.465974</td>\n",
+       "      <td>3.608358</td>\n",
+       "      <td>3.433958</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>test_r2</th>\n",
+       "      <td>0.539030</td>\n",
+       "      <td>0.539039</td>\n",
+       "      <td>0.450345</td>\n",
+       "      <td>0.581959</td>\n",
+       "      <td>0.675750</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                              model_linear_score  model_ridge_score  \\\n",
+       "fit_time                                0.019744           0.018255   \n",
+       "score_time                              0.005108           0.004413   \n",
+       "test_neg_mean_squared_error            84.375763          84.375922   \n",
+       "test_neg_mean_absolute_error            4.716790           4.715743   \n",
+       "test_r2                                 0.539030           0.539039   \n",
+       "\n",
+       "                              model_lasso_score  model_dtree_score  \\\n",
+       "fit_time                               0.031058           0.037427   \n",
+       "score_time                             0.005786           0.003619   \n",
+       "test_neg_mean_squared_error           99.915344          73.753408   \n",
+       "test_neg_mean_absolute_error           5.465974           3.608358   \n",
+       "test_r2                                0.450345           0.581959   \n",
+       "\n",
+       "                              model_rforest_score  \n",
+       "fit_time                                 2.467586  \n",
+       "score_time                               0.032944  \n",
+       "test_neg_mean_squared_error             57.899905  \n",
+       "test_neg_mean_absolute_error             3.433958  \n",
+       "test_r2                                  0.675750  "
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Comparing our models\n",
+    "model_test_results = pd.DataFrame(columns=['model_linear_score', 'model_ridge_score', 'model_lasso_score', 'model_dtree_score', 'model_rforest_score'],\n",
+    "                                  index=model_dtree_score.keys())\n",
+    "\n",
+    "model_test_results['model_linear_score'] = pd.DataFrame(model_linear_score).abs().mean().to_numpy()\n",
+    "model_test_results['model_ridge_score'] = pd.DataFrame(model_ridge_score).abs().mean().to_numpy()\n",
+    "model_test_results['model_lasso_score'] = pd.DataFrame(model_lasso_score).abs().mean().to_numpy()\n",
+    "model_test_results['model_dtree_score'] = pd.DataFrame(model_dtree_score).abs().mean().to_numpy()\n",
+    "model_test_results['model_rforest_score'] = pd.DataFrame(model_rforest_score).abs().mean().to_numpy()\n",
+    "\n",
+    "model_test_results"
    ]
   },
   {
@@ -408,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 309,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -606,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 314,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -675,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -743,7 +1038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -815,7 +1110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -859,7 +1154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
