--- a/Collecting_rening_data.ipynb
+++ b/Collecting_rening_data.ipynb
@@ -1,6 +1,31 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<!-- Name: Pham Le Tu Nhi -->\n",
+    "<!-- Student ID: 21120308 -->\n",
+    "\n",
+    "# Phase 01: Data collection \n",
+    "\n",
+    "We're be collecting data from [this website](https://batdongsan.com.vn). It's a popular website for real estate property exchange (buying and renting) in Vietnam.\n",
+    "\n",
+    "A word of caution: The data pulling from this website won't give us a full view of Ho Chi Minh city's real estate market for many reasons, but mostly because the market is still very heavily depends on words of mouth (introduction from aquaintaince), and there are also other popular digital market like Facebook groups.\n",
+    "\n",
+    "Still, looking into the data is still worthwhile and can give us a rough estimate of the market. Plus it's a good practice exercise for our final project of this course.\n",
+    "\n",
+    "So let's collect our data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First, let's import all the necessary library. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 166,
    "metadata": {},
@@ -16,20 +41,14 @@
     "from bs4 import BeautifulSoup as bs\n",
     "\n",
     "import re\n",
-    "import html\n",
     "import time"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 30,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "fields = [ 'Address', 'Area', 'Price','Rent type', 'Bedroom', 'Toilet', 'Floor', 'Furniture','Posting date', 'Expiry date', 'Ad type', 'Ad code']\n",
-    "rent_type_rename = ['apartment', 'house', 'luxery_house', 'street_house', 'bedsit', 'shophouse', 'office']\n",
-    "rent_type = ['Căn hộ chung cư', 'Nhà riêng', 'Nhà biệt thự, liền kề', 'Nhà mặt phố', 'Nhà trọ, phòng trọ', 'Shophouse nhà phố thương mại', 'Văn phòng']\n",
-    "file_name = 'hcm_rental_propertiest.csv'"
+    "And let's prepare the necessary informations for our data collection."
    ]
   },
   {
@@ -42,7 +61,41 @@
     "url = 'https://batdongsan.com.vn/nha-dat-cho-thue-tp-hcm'\n",
     "\n",
     "# Scraped URL list\n",
-    "url_list = []"
+    "url_list = []\n",
+    "\n",
+    "# Define columns names and export file name\n",
+    "fields = [ 'Address', 'Area', 'Price','Rent type', 'Bedroom', 'Toilet', 'Floor', 'Furniture','Posting date', 'Expiry date', 'Ad type', 'Ad code']\n",
+    "file_name = 'hcm_rental_propertiest.csv'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now let's prepare our scraper. But first, let's talk about the legality of the our webscraping. \n",
+    "\n",
+    "During our research of the website, we see that there is not clear Term of Service (or Use) toward people who access the website without an account, and there isn't any listed Disallow agent or terms in `Robots.txt`, and because we are using the data collected for education purposes, we decided that it is within the law - that is it's legal to collect and analyze the data we have collected from the website.\n",
+    "\n",
+    "During our data collection, we've identify that the website uses Cloudguard technology to identify and prevent non-human agent to access and collect data. To bypass this, we're going to use the Cloudscraper library and some tricks - mainly changing the headers of the requests. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Scrape data\n",
+    "scraper = cloudscraper.create_scraper(delay=10, browser=\"chrome\") "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Collect the urls for all rent posting\n",
+    "\n",
+    "Let's collect all the URLs that leads to all current available rent posting."
    ]
   },
   {
@@ -51,17 +104,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Scrape data\n",
-    "scraper = cloudscraper.create_scraper(delay=10, browser=\"chrome\") \n",
-    "content = scraper.get(url)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# Get content of the first page\n",
+    "content = scraper.get(url)\n",
+    "\n",
     "# Get number of page\n",
     "soup = bs(content.text, 'html.parser')\n",
     "num_of_page = soup.find('span', class_='re__hide js__current-page').get('data-total-page')\n",
@@ -69,15 +114,8 @@
     "# Get url list in first page\n",
     "a_tags_list = soup.find_all('a', class_='re__unreport')\n",
     "for a_tag in a_tags_list:\n",
-    "    url_list.append('https://batdongsan.com.vn/' + a_tag.get('href'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    url_list.append('https://batdongsan.com.vn/' + a_tag.get('href'))\n",
+    "\n",
     "# Similarly, let's scrape the rest of the pages \n",
     "page = '/p'\n",
     "for num_page in range(2, int(num_of_page) + 1):\n",
@@ -86,6 +124,13 @@
     "    a_tags_list = soup.find_all('a', class_='re__unreport')\n",
     "    for a_tag in a_tags_list:\n",
     "        url_list.append('https://batdongsan.com.vn/' + a_tag.get('href'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now that we have the url for all the rent posting, let's save it in a file."
    ]
   },
   {
@@ -106,7 +151,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "-----"
+    "## Scrape the contents of rent posting\n",
+    "\n",
+    "Now let's actually go out and scrape the data on the page of each rent posting. Do to this, we have to load the url list that we have saved from the first step."
    ]
   },
   {
@@ -117,6 +164,19 @@
    "source": [
     "file_name = 'rental_properties_url.txt'\n",
     "url_list = np.genfromtxt(file_name, dtype=str, encoding=None, skip_footer=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are a fews things to keep in mind before we start our process. \n",
+    "\n",
+    "First, we are collect all rent data, which mean there will be many types of property types for rent. We have to be able to differentiate this data point.\n",
+    "\n",
+    "To do that, we have to analyze the structure of web page for rent property. I've go ahead and done that, and discovered the id for each rent type. With this information, I just need to create a function to convert the property type code to the name of the property type.\n",
+    "\n",
+    "We will also prepare some necessary function for our process as well."
    ]
   },
   {
@@ -143,16 +203,11 @@
     "    '59': rent_type[9]\n",
     "}\n",
     "\n",
+    "# Decode property type ID\n",
     "def get_renting_type(rent_code):\n",
-    "    return renting_type_dict[rent_code]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 148,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return renting_type_dict[rent_code]\n",
+    "\n",
+    "# Create list from scraped data\n",
     "def soup_to_list(soup_data):\n",
     "    res = []\n",
     "    for data in soup_data:\n",
@@ -161,8 +216,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will also have to prepare the columns of the collected dataframe. The data collected will be `Address` of the property, `Rent type` as we have defined above, `Post date` of the rent posting, and `Meta data`.\n",
+    "\n",
+    "The `Meta data` can be confusing at first reading, but to breakd own it's just all the pieces of information that accoumpany the rent posting. Not all rent types have the same meta data - information that comes with it becuase they are different type or other reason. For example, `Căn hộ chung cư` might have the meta data for number of bathrooms and bedrooms, while `Kho, nhà xưởng, đất` might not. Because of this different, it's unreasonable to ask for a fixed number of features. Instead, collect all available features from the postings and sort them out later is a better solution."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,10 +240,7 @@
    "execution_count": 191,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Let's try to load the first url in the list\n",
-    "scraper = cloudscraper.create_scraper(delay=15, browser=\"firefox\") "
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -2168,18 +2229,24 @@
     }
    ],
    "source": [
-    "number_pattern = r'(\\d+)'\n",
+    "# Prepare our scrapper\n",
+    "scraper = cloudscraper.create_scraper(delay=15, browser=\"firefox\") \n",
     "\n",
+    "\n",
+    "number_pattern = r'(\\d+)'\n",
     "renting_data = pd.DataFrame(columns=fields)\n",
-    "for i in range(38705, len(url_list), 2000):\n",
+    "\n",
+    "# We are using a step of 2000 to take a break every 2000 web postings\n",
+    "for i in range(0, len(url_list), 2000):\n",
     "    for url in url_list[i:i + 2000]:\n",
+    "        # Collect content of web page and encode string \n",
     "        content = scraper.get(url)\n",
     "        content.encoding = content.apparent_encoding\n",
     "        soup = bs(content.text, 'html.parser')\n",
     "        \n",
     "        collect_data_dict = {}\n",
+    "        # Prevent the whole scrapper crash because of deleted web page\n",
     "        try:\n",
-    "            print(\"got\")\n",
     "            collect_data_dict[fields[0]] = soup.find('span', class_='re__pr-short-description js__pr-address').text.strip()\n",
     "            collect_data_dict[fields[1]] = get_renting_type(re.findall(number_pattern, soup.find('script', type='text/javascript').text.split('=')[1])[3])\n",
     "            collect_data_dict[fields[2]] = dict(zip(\n",
@@ -2194,46 +2261,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 214,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                                                 Address            Rent type  \\\n",
-      "0      Đường Nguyễn Ảnh Thủ, Phường Hiệp Thành, Quận ...      Cửa hàng, ki ốt   \n",
-      "1      Đường Tỉnh lộ 8, Thị trấn Củ Chi, Củ Chi, Hồ C...  Kho, nhà xưởng, đất   \n",
-      "2      Đường Lê Quang Định, Phường 12, Bình Thạnh, Hồ...      Căn hộ chung cư   \n",
-      "3      Đường  Nguyễn Xí, Phường 13, Bình Thạnh, Hồ Ch...      Căn hộ chung cư   \n",
-      "4      Dự án Sunshine Sky City , Đường Phú Thuận, Phư...      Căn hộ chung cư   \n",
-      "...                                                  ...                  ...   \n",
-      "37971  Đường Lũy Bán Bích, Phường Phú Thạnh, Tân Phú,...  Kho, nhà xưởng, đất   \n",
-      "37972  Đường Tân Thành, Phường Tân Thành, Tân Phú, Hồ...  Kho, nhà xưởng, đất   \n",
-      "37973  Đường Huỳnh Văn Bánh, Phường 11, Phú Nhuận, Hồ...            Văn phòng   \n",
-      "37974  Dự án CityLand Park Hills, Đường Phan Văn Trị,...            Văn phòng   \n",
-      "37975  Đường Phạm Văn Chiêu, Phường 14, Gò Vấp, Hồ Ch...   Nhà trọ, phòng trọ   \n",
-      "\n",
-      "                                               Meta data   Post date  \n",
-      "0      {'Diện tích': '180 m²', 'Mức giá': '22 triệu/t...  07/12/2023  \n",
-      "1      {'Diện tích': '1.000 m²', 'Mức giá': '30 triệu...  04/12/2023  \n",
-      "2      {'Diện tích': '40 m²', 'Mức giá': '6,8 triệu/t...  03/12/2023  \n",
-      "3      {'Diện tích': '42 m²', 'Mức giá': '7,8 triệu/t...  03/12/2023  \n",
-      "4      {'Diện tích': '70 m²', 'Mức giá': '15 triệu/th...  07/12/2023  \n",
-      "...                                                  ...         ...  \n",
-      "37971  {'Diện tích': '1.000 m²', 'Mức giá': '100 triệ...  13/11/2023  \n",
-      "37972  {'Diện tích': '220 m²', 'Mức giá': '22 triệu/t...  13/11/2023  \n",
-      "37973  {'Diện tích': '100 m²', 'Mức giá': '22 triệu/t...  13/11/2023  \n",
-      "37974  {'Diện tích': '700 m²', 'Mức giá': '120 triệu/...  13/11/2023  \n",
-      "37975  {'Diện tích': '35 m²', 'Mức giá': '3,5 triệu/t...  13/11/2023  \n",
-      "\n",
-      "[37976 rows x 4 columns]\n"
-     ]
-    }
-   ],
    "source": [
-    "print(renting_data)"
+    "The whole process takes a lot of time to complete (about 10 hours), and we have collected more than 40,000 samples. Yay!\n",
+    "\n",
+    "Now let's export the data we've collected to a file, and we are done!"
    ]
   },
   {
@@ -2242,67 +2275,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "export_file = 'renting_data_hcm.csv'\n",
+    "export_file = 'hcm_rent_data.csv'\n",
     "renting_data.to_csv(export_file, mode='a', header=None)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 220,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "data = pd.read_csv(export_file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 226,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data.drop(['Unnamed: 0'], axis=1, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 227,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "new_export_file = 'hcm_rent_data.csv'\n",
-    "data.to_csv(new_export_file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 229,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0        {'Diện tích': '50 m²', 'Mức giá': '17 triệu/th...\n",
-       "1        {'Diện tích': '50 m²', 'Mức giá': '17 triệu/th...\n",
-       "2        {'Diện tích': '77 m²', 'Mức giá': '23 triệu/th...\n",
-       "3        {'Diện tích': '50 m²', 'Mức giá': '17 triệu/th...\n",
-       "4        {'Diện tích': '52 m²', 'Mức giá': '16,9 triệu/...\n",
-       "                               ...                        \n",
-       "40594    {'Diện tích': '8.000 m²', 'Mức giá': '100 triệ...\n",
-       "40595    {'Diện tích': '160 m²', 'Mức giá': '130 triệu/...\n",
-       "40596    {'Diện tích': '1.350 m²', 'Mức giá': '22 triệu...\n",
-       "40597    {'Diện tích': '17.000 m²', 'Mức giá': '20 triệ...\n",
-       "40598    {'Diện tích': '100 m²', 'Mức giá': '345 nghìn/...\n",
-       "Name: Meta data, Length: 40599, dtype: object"
-      ]
-     },
-     "execution_count": 229,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data['Meta data']"
+    "That's the end of Phase 1! Let's continue to Phase 2!"
    ]
   }
  ],
