--- a/Notebook/Phase0.2_Preprocessing_for_sale.ipynb
+++ b/Notebook/Phase0.2_Preprocessing_for_sale.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1718,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1719,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
        "4   Sổ đỏ/ Sổ hồng.   07/12/2023  14/12/2023  Tin VIP Kim Cương  38734339  "
       ]
      },
-     "execution_count": 1719,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1720,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1721,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1722,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1723,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
        "Ad code            0.000000"
       ]
      },
-     "execution_count": 1723,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1724,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +473,7 @@
        " 'Ad code']"
       ]
      },
-     "execution_count": 1724,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1725,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -535,7 +535,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 1725,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -573,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1726,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -667,7 +667,7 @@
        "[55046 rows x 1 columns]"
       ]
      },
-     "execution_count": 1726,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -685,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1727,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -694,7 +694,7 @@
        "{'m²'}"
       ]
      },
-     "execution_count": 1727,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -718,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1728,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -755,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1729,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -828,7 +828,7 @@
        "27603  Sổ đỏ/ Sổ hồng   23/11/2023  08/12/2023  Tin thường  38497317  "
       ]
      },
-     "execution_count": 1729,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -847,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1730,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -856,7 +856,7 @@
        "{'nghìn/m²', 'thuận', 'triệu', 'triệu/m²', 'tỷ', 'tỷ/m²'}"
       ]
      },
-     "execution_count": 1730,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -883,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1731,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -922,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1732,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -931,7 +931,7 @@
        "5715"
       ]
      },
-     "execution_count": 1732,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -950,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1733,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -994,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1734,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1005,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1735,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1042,7 +1042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1736,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1078,7 +1078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1737,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1112,7 +1112,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 1737,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1142,7 +1142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1738,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1155,7 +1155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1739,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1179,7 +1179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1740,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1219,7 +1219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1741,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1235,7 +1235,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 1741,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1263,7 +1263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1742,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1299,7 +1299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1743,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1316,7 +1316,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 1743,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1336,7 +1336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1744,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1357,7 +1357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1745,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1369,7 +1369,7 @@
        "       'Bất động sản khác'], dtype=object)"
       ]
      },
-     "execution_count": 1745,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1380,7 +1380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1746,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1409,7 +1409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1747,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1420,7 +1420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1748,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1472,7 +1472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1749,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1496,11 +1496,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1750,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5297"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "columns_to_detect = ['Area(m2)', 'Price(VNĐ)', 'Bedroom(Phòng)', 'Toilet(Phòng)', 'Floor(Tầng)']\n",
+    "\n",
     "cleaned_real_estate_df = real_estate_for_sale_df.copy()\n",
     "\n",
     "for column in columns_to_detect:\n",
@@ -1515,7 +1527,10 @@
     "\n",
     "    outliers_mask = (cleaned_real_estate_df[column] < lower_threshold) | (cleaned_real_estate_df[column] > upper_threshold)\n",
     "\n",
-    "    cleaned_real_estate_df = cleaned_real_estate_df[~outliers_mask]\n"
+    "    cleaned_real_estate_df = cleaned_real_estate_df[~outliers_mask]\n",
+    "\n",
+    "\n",
+    "cleaned_real_estate_df['Price(VNĐ)'].isna().sum()"
    ]
   },
   {
@@ -1535,7 +1550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1751,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1626,7 +1641,7 @@
        "Project          0.000000"
       ]
      },
-     "execution_count": 1751,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1646,7 +1661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1752,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1661,7 +1676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1753,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1752,7 +1767,7 @@
        "Project          0.000000"
       ]
      },
-     "execution_count": 1753,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1771,7 +1786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1754,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1819,7 +1834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1755,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
